# Multi-AI-Agent-Catering-System-with-MCP-Integration

./: .gitignore  README.md  catering_result.txt  catering_server.py  client.ipynb  client.py  project_structure.md  pyproject.toml
rag/: database.py  main.py  models.py  query_engine.py
rag/data/: chefs.csv  guests.csv  recipes.csv  restaurant.db
